--- a/Proyecto Final/index.html
+++ b/Proyecto Final/index.html
@@ -8,6 +8,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Saira:ital@1&family=Staatliches&display=swap" rel="stylesheet">
+  <!-- https://fontawesome.com/ -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!-- Local Style -->
@@ -36,9 +38,6 @@
               <a class="nav-link active" aria-current="page" href="#">Calzado</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Pantalones</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Accesorios</a>
             </li>
             <li class="nav-item">
@@ -51,6 +50,10 @@
           <form class="d-flex">
             <input class="form-control me-2" type="Buscar" placeholder="Busca tu producto aqui" aria-label="Buscar" >
             <button id="btnBuscar" class="btn btn-outline-success" type="submit" style="color: white;">Buscar</button>
+            <span id="contadorCarrito" class="fa-stack fa-2x has-badge" data-count="0">
+              <i class="fa fa-circle fa-stack-2x bg-dark"></i>
+              <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+            </span>
           </form>
         </div>
       </div>
